--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,4 +7,23 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    .header
+      -# %h1 GOODLUCK
+      .resister
+        .header
+          %h3.header__name
+            = current_user.name
+          %ul.header__lists
+            %li.list
+              = link_to do
+                = fa_icon 'pencil-square-o', class: 'icon'
+            %li.list
+              = link_to edit_user_path(current_user) do
+                = fa_icon 'cog', class: 'icon'
+            %li.list
+
+    
+        
+   
+            
     = yield
