--- a/app/views/tops/index.html.haml
+++ b/app/views/tops/index.html.haml
@@ -1,11 +1,5 @@
-.side-bar
-  .header
-    %h3.header__name
-      = current_user.name
-    %ul.header__lists
-      %li.list
-        = link_to do
-          = fa_icon 'pencil-square-o', class: 'icon'
-      %li.list
-        = link_to edit_user_path(current_user) do
-          = fa_icon 'cog', class: 'icon'
+.contents
+  .side-bar
+    - @countries.each do |country|
+      = link_to country_articles_path(country) do
+        = country.name
