--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,22 +8,19 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     .header
-      -# %h1 GOODLUCK
+      .welcome
+        Welcome!
       .resister
         .header
-          %h3.header__name
+          - if user_signed_in?
+            %h3.user__name
             = current_user.name
-          %ul.header__lists
-            %li.list
-              = link_to do
-                = fa_icon 'pencil-square-o', class: 'icon'
-            %li.list
-              = link_to edit_user_path(current_user) do
-                = fa_icon 'cog', class: 'icon'
-            %li.list
+            .user_nav.grid-6
+              = link_to "ログアウト", destroy_user_session_path, method: :delete
+              %a.post{:href => "/articles/new"} 投稿する
+          - else
+            .grid-6
+              = link_to "ログイン", new_user_session_path, class: 'post'
+              = link_to "新規登録", new_user_registration_path, class: 'post'
 
-    
-        
-   
-            
     = yield
