--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,20 +1,20 @@
-body {
-  background-image: image-url("3720cbaf0f36bd741cb8cd560ad4fbed_m.jpg");
-  background-size: auto; 
-  background-attachment: fixed;
-}
-
 .header {
   height: 100px;
   background-color: rgba(226, 226, 243, 0.2);
+  display: flex;
+  .welcome {
+    color:white;
+    font-size: 30px;
+    margin-right: 50px;
+  }
   .resister{
     .header {
-      background-color: #253141;
       height: 100px;
       display: flex;
       align-items: center;
       padding: 0 20px;
-      &__user-name {
+      .user-name {
+        font-size: 30px;
         justify-content: space-between;
         width: 100%;
         font-weight: bold;
@@ -31,20 +31,27 @@ body {
     }
   }
 }
-.contents {
-  height:100vh;
-  .side-bar {
-  
-    box-sizing: border-box;
-    width: 300px;
-    color: white;
-    float: left;
-    height: 100%;
+
+.form {
+  .form-box {
+    margin-top: 100px;
+    margin-left: 200px;
+    height: 500px;
+    #article_title {
+      margin: 10px;
+      width:400px;
+      height: 30px;
+    }
+    #article_text {
+      margin: 10px;
+      width:400px;
+      height: 200px;
+    }
   }
 }
-
-
 
 @import "variable";
 @import "reset";
 @import "font-awesome";
+@import "tops";
+@import "users";
