create side_bar template

--- a/app/views/tops/index.html.haml
+++ b/app/views/tops/index.html.haml
@@ -1,10 +1,6 @@
 .contents
-  .side-bar
-    - @countries.each do |country|
-      .link
-        = link_to country_articles_path(country) ,class: "font" do
-          = country.name
-
+  = render 'articles/side_bar'
+  
   .concepts
     .title
       Goodluck!!
