change top view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,3 +31,17 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face{
+  font-family: "Daniels";
+  src: url('Daniels Signature DEMO.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face{
+  font-family: "Sketch";
+  src: url('Sketch Book.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
