--- a/app/views/tops/index.html.haml
+++ b/app/views/tops/index.html.haml
@@ -3,6 +3,13 @@
   
   .concepts
     .title
-      Goodluck!!
+      Goodluck
     .message
-      旅の思い出を共有しよう！
+      Remember when I told you
+      "No matter where I go
+      I'll never leave your side
+      You will never be alone"
+      Even when we go through changes
+      Even when we're old
+      Remember that I told you
+      I'll find my way back home
