--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -8,9 +8,10 @@
       = article.text
     .show-image
       PHOTO：
-      - if article.image?
+      - if article.images.present?
         .article_image
-        = article.title
+          - article.images.each do |image|
+            = image_tag image.image.url
 
         -# %td= link_to 'Show', articles_path
         -# %td= link_to 'Edit', edit_article_path(article)
