--- a/app/views/articles/_side_bar.html.haml
+++ b/app/views/articles/_side_bar.html.haml
@@ -1,4 +1,8 @@
 .side-bar
+  .link_description
+    国を選択すると
+    %br
+    関連記事が見れます⬇︎
   - @countries.each do |country|
     .link
       = link_to country_articles_path(country) ,class: "font" do
