--- a/app/assets/stylesheets/article/_new.scss
+++ b/app/assets/stylesheets/article/_new.scss
@@ -24,7 +24,7 @@
         }
         #article_text {
           width: 100%;
-          height: 500px;
+          height: 300px;
           padding: 10px;
           font-size: 18px;
           resize: none;
@@ -34,9 +34,18 @@
       .image-field{
         padding-top: 15px;
         color: #1b0a6e;
+        width: 60%;
+        margin: 0 auto;
         .image-select {
-          background-color: #fff;
+          background-color: rgb(213, 236, 255);
           display: flex;
+        }
+        label {
+          display: block;
+        }
+        img {
+          border: 0.06rem solid #1b0a6e;
+          margin: 0 20px;
         }
       }
     }
