--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -10,7 +10,7 @@
     .welcome {
       font-size: 50px;
       .welcome-path {
-        font-family: 'Sketch';
+        font-family: 'impact';
         text-decoration: none;
         color: #1b0a6e;
       }
