--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
     .header
       .header-details
         .welcome
-          = link_to 'Welcome', root_path, class: "welcome-path"
+          = link_to 'GOODLUCK', root_path, class: "welcome-path"
         - if user_signed_in?
           %h1.user-name
             = current_user.name
