--- a/app/assets/stylesheets/tops.scss
+++ b/app/assets/stylesheets/tops.scss
@@ -20,7 +20,8 @@
       margin-left: 25px;
     }
     .font {
-      font-family: "Sketch";
+      font-family: "impact";
+      letter-spacing: 0.05em;
       text-decoration: none;
       font-size: 32px;
       color:#1b0a6e;
