--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,9 +3,9 @@
 @import "tops";
 @import "users";
 @import "article/new";
-@import "article/index";
-@import "article/user_articles";
+@import "article/articles";
 @import "header";
+@import "device";
 
 @font-face{
   font-family: "Daniels";
