--- a/app/views/tops/index.html.haml
+++ b/app/views/tops/index.html.haml
@@ -1,15 +1,30 @@
 .contents
   = render 'articles/side_bar'
   
-  .concepts
-    .title
-      Goodluck
-    .message
-      Remember when I told you
-      "No matter where I go
-      I'll never leave your side
-      You will never be alone"
-      Even when we go through changes
-      Even when we're old
-      Remember that I told you
-      I'll find my way back home
+  .articles
+    .articles_list
+      - if @articles.present?
+        .show_detail
+          - @articles.each do |article|
+            .article-block
+              .show-title
+                = article.title
+              .show-country
+                国：
+                = article.country.name
+              .show-user
+                ユーザー：
+                = article.user.name
+              .show-content
+                = simple_format(article.text)
+              .show-image
+                - if article.images.present?
+                  .article_image
+                    - article.images.each do |image|
+                      = image_tag image.image.url
+      - else
+        .article_none
+          投稿記事はまだありません。
+
+      .top-link
+        = link_to 'トップに戻る', root_path
